fixed not showing in room users to first user

--- a/src/Pages/Chat/chat.scss
+++ b/src/Pages/Chat/chat.scss
@@ -24,6 +24,7 @@
       .users_header {
         padding: 0.5rem 1rem;
         font-size: calc(1.5vw);
+        font-weight: bold;
       }
 
       .users_line {
